--- a/Form-cadastro.html
+++ b/Form-cadastro.html
@@ -9,7 +9,7 @@
     <h1>Formulário de cadastro</h1>
     <form>
         <label for="nome" >Nome</label>
-        <input id="nome" type="Nome"/>
+        <input type="text" placeholder="Seu nome"/>
         <br/>
         
         <label for="email" >E-mail</label>
@@ -17,7 +17,7 @@
         <br/>
 
         <label for="Senha" >Senha</label>
-        <input id="Senha" type="Senha"/>
+        <input id="Senha" type="password"/>
         <br/>
 
         <button type="submit">
@@ -27,4 +27,5 @@
     </form>
 </body>
 </html>
+
 
